moved reusable native code to jni/nativeCode

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ model {
             stl       = 'gnustl_static'
 
             // specify the path to jni code
-            cppFlags.addAll(['-I' + file('src/main/jni/triangle'),
-                            '-I' + file('src/main/jni/common')])
+            cppFlags.addAll(['-I' + file('src/main/jni/nativeCode/triangle'),
+                            '-I' + file('src/main/jni/nativeCode/common')])
 
             cppFlags.addAll(['-std=c++11', '-Wall', '-fno-exceptions', '-fno-rtti'])
             ldLibs.addAll(['android', 'log', 'EGL', 'GLESv2', "stdc++"])
